# CaretakerAI

./: .gitignore  README.md
backend/: pyproject.toml
backend/backend/: types.py
backend/backend/config/: database.py
backend/backend/controllers/: controller.py
backend/backend/db/: create.py  insert.py
backend/backend/engine/: agents.py  chain.py  function_schemas.py  llm.py  tools.py
backend/backend/engine/utils/: sendEmail.py
backend/backend/samples/: dynamicApiCalls.py  sampleApiCalls.py  testSms.py
backend/caretaker-ai/: pyproject.toml
backend/sft/: Llama_3_2_1B+3B_Conversational_+_2x_faster_finetuning.ipynb
frontend/: package.json
frontend/app/: layout.tsx  page.module.css  page.tsx
frontend/app/components/: ai.tsx  header.tsx  listen.tsx  signUp.tsx
frontend/app/doctor/addPatient/: page.tsx
frontend/app/doctor/viewPatientSummary/[patientId]/: page.tsx
frontend/app/patient/[patientId]/: page.tsx
frontend/pages/: index.tsx
samples/: speechToText.py  textToSpeech.py
