[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ahmed Moubtahij <ahmed.moubtahij@crim.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.2.9"
python-dotenv = "^1.0.1"
langchain = "^0.3.8"
pymongo = "^4.10.1"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
